--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+.DS_Store
+node_modules
+/dist
+
 #Eclipse
 .classpath
 .project
@@ -40,5 +44,20 @@ local.sbt
 # spring
 *.springBeans
 
-# VSC
-.vscode/
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw*
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
